# reflectl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  semantic.toml.example
.claude/: settings.json
.codex/: README.md
frameworks/: cross-validation.md  dialectical-thinking.md  double-loop-learning.md  eisenhower-matrix.md  ikigai.md  immunity-to-change.md  jobs-to-be-done.md  johari-window.md  ooda-loop.md  pre-mortem.md  regret-minimization.md  theory-of-constraints.md
harness/: README.md  agents.toml  capabilities.toml  commands.toml  models.toml
protocols/: README.md  agent-handoff.md  antipatterns.md  atelier.md  coaching-progressions.md  context-management.md  contradiction-detection.md  drive-zk-ingestion.md  epistemic-hygiene.md  error-handling.md  escalation.md  feedback-loops.md  harness-assumptions.md  local-first-architecture.md  meta-reflection.md  orchestrator.md  pattern-library.md  quality-gates.md  raw-indexing.md  repo-conventions.md  runtime-adapters.md  semantic-vocabulary.md  session-continuity.md  session-log.md  session-scoring.md  wiki-schema.md
scripts/: README.md  atelier.py  auto_memory_audit.py  config.py  convert.py  fission.py  fission_daily_notes.py  harness_lint.py  harness_smoke.py  health.py  lint.py  log_backlinks.py  merge_daily.py  privacy_allowlist.txt  privacy_check.py  reflectl.py  relink.py  restore.py  review.sh  semantic.py  semantic_backends.py  session_log.py  snapshot_anchors.py  staleness.py  sync_export.py  todos.py  trust.py  wiki_vocabulary.txt  wikilink_to_md.py  zk_audit.py
sources/: cite.py  (+4 more)
(+33 files in other folders)
