[project]
name = "reflectl"
version = "0.1.0"
description = "Reflection team orchestrator with semantic search over a local zk/ vault"
requires-python = ">=3.14.3"
dependencies = [
    "sentence-transformers>=5.4.0",
    "lancedb>=0.30.2",
    "torch>=2.11.0",
    "numpy>=2.4.4",
    "pyarrow>=23.0.1",
    "pandas>=3.0.2",
    "markitdown[pdf]>=0.1.5",
    "pymupdf4llm>=1.27.2",
]

[project.optional-dependencies]
ocr = ["docling>=2.0"]
